clean basic code

--- a/C2C_API_v5.ipynb
+++ b/C2C_API_v5.ipynb
@@ -158,67 +158,17 @@
     }
    ],
    "source": [
-    "#>>>Y-a-t-il un moyen de traiter plus rapidement les imports que je récupère?\n",
-    "#>>>Créer des fonctions pour ceux que je n'arrive pas à récupérer avec json_normalize - \n",
-    "\n",
-    "#Step 1: flatten json files - iteratively -\n",
-    "\n",
+    "#Flatten json file\n",
     "d = pd.DataFrame()\n",
     "\n",
-    "arr_lat=[]\n",
-    "arr_long=[]\n",
-    "arr_id=[]\n",
-    "\n",
-    "# for k in range(len(json_data)):\n",
-    "for k in range(0,1):\n",
-    "    \n",
-    "    #Flatten json file\n",
+    "for k in range(len(json_data)):    \n",
     "    d=d.append(json_normalize(json_data[k]['documents'],max_level=1))\n",
+    "\n",
+    "d.reset_index(inplace=True, drop=True)\n",
     "    \n",
-    "    #Fetch latitude & longitude\n",
-    "    for i in range(len(json_data[k]['documents'])):\n",
-    "        arr_lat.append(json.loads(json_data[k]['documents'][i]['geometry']['geom'])['coordinates'][0])\n",
-    "        arr_long.append(json.loads(json_data[k]['documents'][i]['geometry']['geom'])['coordinates'][1])\n",
-    "        arr_id.append(json_data[k]['documents'][i]['document_id'])\n",
-    "\n",
-    "        \n",
-    "d['latitude']=arr_lat\n",
-    "d['longitude']=arr_long\n",
-    "d['doc_id_test']=arr_id\n",
-    "\n",
-    "# Check - OK\n",
-    "print(np.sum(d['document_id']==d['doc_id_test']))\n",
-    "\n",
-    "    #Locales - OK - A adapter pour la boucle\n",
-    "    # d_locales = json_normalize(json_data['documents'], record_path=['locales'], meta='document_id')\n",
-    "    # d = pd.merge(left=d, right=d_locales,on='document_id')\n",
-    "\n",
-    "    #Areas - A d'utilité -> on ne prend pas\n",
-    "    # test = json_normalize(json_data['documents'], record_path=['areas'])\n",
-    "    # test\n",
-    "    # test.loc[0,'locales']\n",
-    "\n",
-    "    # print(d.columns)\n",
-    "\n",
-    "# for k in d.columns:\n",
-    "#     print(str(k) + ' - ' + str(d.loc[3,k]))\n",
-    "\n",
-    "d.head()\n",
-    "# print(d.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#COLUMNS Selection & order - ID, user, acitivité, date, difficulté, condition - \n",
     "cols = ['document_id','activities','date_start','date_end','condition_rating','author.name','author.user_id','labande_global_rating','ski_rating','global_rating','engagement_rating','hiking_rating','equipment_rating','rock_free_rating','ice_rating','elevation_max','height_diff_up','height_diff_difficulties']\n",
-    "d=d[cols]\n",
-    "\n",
-    "#Reset index\n",
-    "d.reset_index(inplace=True, drop=True)\n"
+    "d=d[cols]"
    ]
   },
   {
@@ -258,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#- DATA Types -\n",
+    "#- Clean data types -\n",
     "\n",
     "# Categorical data -\n",
     "col_to_category=['condition_rating','labande_global_rating','ski_rating','global_rating','engagement_rating','hiking_rating','equipment_rating','rock_free_rating','ice_rating']\n",
