--- a/C2C_API_v5.ipynb
+++ b/C2C_API_v5.ipynb
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# # Parse json file & data cleaning"
+    "# # Build dataframe - "
    ]
   },
   {
@@ -158,17 +158,25 @@
     }
    ],
    "source": [
-    "#Flatten json file\n",
+    "#Flatten json file - \n",
     "d = pd.DataFrame()\n",
     "\n",
     "for k in range(len(json_data)):    \n",
     "    d=d.append(json_normalize(json_data[k]['documents'],max_level=1))\n",
     "\n",
     "d.reset_index(inplace=True, drop=True)\n",
-    "    \n",
-    "#COLUMNS Selection & order - ID, user, acitivité, date, difficulté, condition - \n",
-    "cols = ['document_id','activities','date_start','date_end','condition_rating','author.name','author.user_id','labande_global_rating','ski_rating','global_rating','engagement_rating','hiking_rating','equipment_rating','rock_free_rating','ice_rating','elevation_max','height_diff_up','height_diff_difficulties']\n",
-    "d=d[cols]"
+    "\n",
+    "#Drop_duplicates (caused by multi-activities outings exported several times during requests)\n",
+    "print('Nombre de doublons de document_id : {}'.format(np.sum(d.duplicated(subset='document_id'))))\n",
+    "d.drop_duplicates(inplace=True)\n",
+    "print('Nombre de doublons de document_id : {}'.format(np.sum(d.duplicated(subset='document_id'))))\n",
+    "\n",
+    "#Select relevant columns -  \n",
+    "cols = ['document_id','activities','date_start','date_end','author.name','author.user_id']\n",
+    "d=d[cols]\n",
+    "\n",
+    "#Print first rows\n",
+    "d.head()"
    ]
   },
   {
@@ -177,7 +185,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Cleaning Activities - \n",
+    "#Clean columns -\n",
+    "\n",
+    "# Clean activity - \n",
     "def binary(x,a):\n",
     "    if a in x:\n",
     "        return True\n",
@@ -191,55 +201,19 @@
     "\n",
     "d.drop('activities', inplace=True, axis=1)\n",
     "\n",
-    "#Drop_duplicates - Doublon document_id à cause du multi activités\n",
-    "print('Nombre de doublons de document_id : {}'.format(np.sum(d.duplicated(subset='document_id'))))\n",
-    "d.drop_duplicates(inplace=True)\n",
-    "print('Nombre de doublons de document_id : {}'.format(np.sum(d.duplicated(subset='document_id'))))\n",
-    "\n",
-    "#Check - Date min pour chaque activité\n",
-    "#>>>>>Code à revoir\n",
-    "# d_date_min = d.groupby(by='activities')['date_start'].min()\n",
-    "# print(d_date_min)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#- Clean data types -\n",
-    "\n",
-    "# Categorical data -\n",
-    "col_to_category=['condition_rating','labande_global_rating','ski_rating','global_rating','engagement_rating','hiking_rating','equipment_rating','rock_free_rating','ice_rating']\n",
-    "\n",
-    "for c in col_to_category:\n",
-    "    d[c]=d[c].astype('category')\n",
-    "    \n",
-    "#>>>Category avec ordre pour toutes les cotations    \n",
-    "d['global_rating'] = pd.Categorical(d['global_rating'], ['F','F+','PD-','PD','PD+','AD-','AD','AD+','D-','D','D+','TD-','TD','TD+','ED-','ED','ED+','ED4','ED5','ED7'],ordered=True)\n",
-    "d['global_rating_codes'] = d['global_rating'].cat.codes\n",
-    "d['rock_free_rating'] = pd.Categorical(d['rock_free_rating'], ['2','3a','3b','3c','4a','4b','4c','5a','5a+','5b','5b+','5c','5c+','6a','6a+','6b','6b+','6c','6c+','7a','7a+','7b','7b+','7c','7c+','8a','8a+'],ordered=True)\n",
-    "d['rock_free_rating_codes'] = d['rock_free_rating'].cat.codes\n",
-    "#X[categorical_cols] = X[categorical_cols].apply(lambda col: le.fit_transform(col))\n",
-    "\n",
-    "# Datetime data\n",
+    "# Convert to datetime\n",
     "col_to_date=['date_end','date_start']\n",
     "d[col_to_date]=d[col_to_date].apply(lambda x: pd.to_datetime(x))\n",
     "\n",
-    "# Float\n",
-    "col_to_float =['elevation_max','height_diff_up']\n",
-    "d[col_to_float]=d[col_to_float].astype(float)\n",
-    "\n",
-    "# Int\n",
+    "# Convert to integer\n",
     "col_to_int=['document_id','author.user_id']\n",
     "d[col_to_int]=d[col_to_int].astype(int)\n",
     "\n",
-    "# CHECK\n",
+    "# CHECK - \n",
     "print(d.info())\n",
     "d.head()\n",
     "\n",
-    "d['month']=d.date_start.dt.month\n"
+    "d['month']=d.date_start.dt.month"
    ]
   }
  ],
