--- a/C2C_API_v5.ipynb
+++ b/C2C_API_v5.ipynb
@@ -341,7 +341,7 @@
     "# Clean columns -\n",
     "\n",
     "# Clean activity - \n",
-    "def binary(x,a):\n",
+    "def dummies_activity(x,a):\n",
     "    if a in x:\n",
     "        return True\n",
     "    else:\n",
@@ -350,7 +350,7 @@
     "activities=['skitouring', 'rock_climbing','mountain_climbing','ice_climbing','hiking','snow_ice_mixed']\n",
     "\n",
     "for activity in activities:\n",
-    "    d[activity]=d.activities.apply(lambda x: binary(x,activity))\n",
+    "    d[activity]=d.activities.apply(lambda x: dummies_activity(x,activity))\n",
     "\n",
     "d.drop('activities', inplace=True, axis=1)\n",
     "\n",
