restore code eda

--- a/C2C_API_v5.ipynb
+++ b/C2C_API_v5.ipynb
@@ -361,6 +361,81 @@
     "# CHECK - \n",
     "d.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('outings.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#>>>>>Trouver une question plus sympa - \n",
+    "#>>EDA on number of outings - \n",
+    "\n",
+    "#Etude des sorties - Année 2018 et 2019 \n",
+    "date_start = datetime(year=2017,month=12,day=31)\n",
+    "date_end = datetime(year=2019,month=12,day=31)\n",
+    "df_outings = d[(d['date_start']>date_start) & (d['date_end']<=date_end)] \n",
+    "\n",
+    "#>>>Plot des séries temporelles à revoir - \n",
+    "# #>>Voir comment faire le graph temporel en plus propose\n",
+    "# Quand pratiquait à quelle période de l'année?\n",
+    "#Biais des vacances dans le nombre de sorties - en terme de disponibilité - intéressant sur rock_climbing - sur représentation de la période - \n",
+    "#Quand peut-on pratiquait?\n",
+    "\n",
+    "# df_outings_daily = df_outings.groupby(by=[pd.Grouper(key='date_start',freq='D'),'activities']).count()\n",
+    "# df_outings_daily.reset_index(inplace=True)\n",
+    "# df_outings_daily.head()\n",
+    "\n",
+    "# # test = df_outings.groupby(by=[pd.Grouper(key='date_start',freq='M'),'activities'])['document_id','author.user_id'].count()\n",
+    "# # test.reset_index(inplace=True)\n",
+    "# # test.head(15)\n",
+    "# # test.dropna(subset='document_id',inplace=True,axis=0)\n",
+    "\n",
+    "# sns.set()\n",
+    "# sns.lineplot(x='date_start',y='document_id',hue='activities',data=df_outings_daily)\n",
+    "# plt.show()\n",
+    "         \n",
+    "        \n",
+    "#Heatmap des pratiques par mois\n",
+    "#>>>Streamliner la construction de la heatmap? - \n",
+    "\n",
+    "df_outings['month']=df_outings.date_start.dt.month\n",
+    "# df_outings['month']=df_outings.date_start.apply(lambda x: x.strftime('%B'))\n",
+    "\n",
+    "df_outings_by_act_month_wide=df_outings.groupby('month',as_index=False)[activities].sum()\n",
+    "df_outings_by_act_month = pd.melt(df_outings_by_act_month_wide,id_vars=['month'],var_name='activities',value_vars=activities,value_name='number_outings')\n",
+    "df_outings_by_act_month.set_index(['activities','month'], inplace=True)\n",
+    "df_outings_by_act = df_outings_by_act_month.groupby('activities').sum()\n",
+    "df_outings_by_act.head()\n",
+    "\n",
+    "df_outings_by_act_month_pcts = df_outings_by_act_month.div(df_outings_by_act,level='activities',axis=0)*100\n",
+    "df_outings_by_act_month_pcts.head()\n",
+    "\n",
+    "#Check - Somme des activites à 100 - OK\n",
+    "# df_outings_by_act_month_pcts.groupby('activities').sum()\n",
+    "\n",
+    "df_heatmap = pd.pivot_table(df_outings_by_act_month_pcts,index='activities',columns='month',values='number_outings')\n",
+    "df_heatmap.columns=['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec']\n",
+    "\n",
+    "f, ax = plt.subplots(figsize=(9, 6))\n",
+    "sns.heatmap(df_heatmap, annot=True, linewidths=.1, ax=ax,fmt=\".0f\",cmap='Blues')\n",
+    "plt.title(\"Nature des pratiques de montagne au cours de l'année\")\n",
+    "plt.show()         \n",
+    "\n",
+    "#INSIGHT - When to is it best to practice? e.g. when most people do - hypothèse contraintes de conditions - when you can people practices - \n",
+    "#INSIGHT -Pose la question de la polyvalence des pratiquants - \n",
+    "#IN - Comportement moyen des ytilisateurs - est-ce que ça cache différents types de pratiques ou de la polyvalence?"
+   ]
   }
  ],
  "metadata": {
