--- a/C2C_API_v5.ipynb
+++ b/C2C_API_v5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {
     "scrolled": true
    },
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre total de reqûetes :1040\n"
+      "Nombre total de reqûetes :3\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
@@ -102,6 +102,8 @@
        "      <th>date_end</th>\n",
        "      <th>author.name</th>\n",
        "      <th>author.user_id</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -113,6 +115,8 @@
        "      <td>2020-03-23</td>\n",
        "      <td>christian73</td>\n",
        "      <td>1071965</td>\n",
+       "      <td>722846.725591</td>\n",
+       "      <td>5.729444e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -122,6 +126,8 @@
        "      <td>2020-03-17</td>\n",
        "      <td>dormeur10</td>\n",
        "      <td>800213</td>\n",
+       "      <td>773581.331208</td>\n",
+       "      <td>5.770432e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -131,6 +137,8 @@
        "      <td>2020-03-17</td>\n",
        "      <td>christian73</td>\n",
        "      <td>1071965</td>\n",
+       "      <td>728011.892440</td>\n",
+       "      <td>5.728002e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -140,6 +148,8 @@
        "      <td>2020-03-17</td>\n",
        "      <td>janic</td>\n",
        "      <td>578085</td>\n",
+       "      <td>19054.692104</td>\n",
+       "      <td>5.294350e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -149,6 +159,8 @@
        "      <td>2020-03-17</td>\n",
        "      <td>Paulo</td>\n",
        "      <td>991164</td>\n",
+       "      <td>723782.408575</td>\n",
+       "      <td>5.766919e+06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -162,15 +174,15 @@
        "3      1195132                                       [skitouring]  2020-03-17   \n",
        "4      1195116          [skitouring, snow_ice_mixed, paragliding]  2020-03-17   \n",
        "\n",
-       "     date_end  author.name  author.user_id  \n",
-       "0  2020-03-23  christian73         1071965  \n",
-       "1  2020-03-17    dormeur10          800213  \n",
-       "2  2020-03-17  christian73         1071965  \n",
-       "3  2020-03-17        janic          578085  \n",
-       "4  2020-03-17        Paulo          991164  "
+       "     date_end  author.name  author.user_id       latitude     longitude  \n",
+       "0  2020-03-23  christian73         1071965  722846.725591  5.729444e+06  \n",
+       "1  2020-03-17    dormeur10          800213  773581.331208  5.770432e+06  \n",
+       "2  2020-03-17  christian73         1071965  728011.892440  5.728002e+06  \n",
+       "3  2020-03-17        janic          578085   19054.692104  5.294350e+06  \n",
+       "4  2020-03-17        Paulo          991164  723782.408575  5.766919e+06  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,14 +191,26 @@
     "# Flatten json file - \n",
     "d = pd.DataFrame()\n",
     "\n",
-    "for k in range(len(result)):    \n",
-    "    d=d.append(json_normalize(result[k]['documents'],max_level=1))\n",
+    "arr_lat=[]\n",
+    "arr_long=[]\n",
     "\n",
+    "for page in result:    \n",
+    "    \n",
+    "    d=d.append(json_normalize(page['documents'],max_level=1))\n",
+    "    \n",
+    "    for outing in page['documents']:\n",
+    "        arr_lat.append(json.loads(outing['geometry']['geom'])['coordinates'][0])\n",
+    "        arr_long.append(json.loads(outing['geometry']['geom'])['coordinates'][1])\n",
+    "            \n",
     "d.reset_index(inplace=True, drop=True)\n",
     "\n",
     "# Select relevant columns -  \n",
     "cols = ['document_id','activities','date_start','date_end','author.name','author.user_id']\n",
     "d=d[cols]\n",
+    "\n",
+    "#Add geo coordinates\n",
+    "d['latitude']=arr_lat\n",
+    "d['longitude']=arr_long\n",
     "\n",
     "# Print first rows\n",
     "d.head()"
@@ -194,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -223,6 +247,8 @@
        "      <th>date_end</th>\n",
        "      <th>author.name</th>\n",
        "      <th>author.user_id</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
        "      <th>skitouring</th>\n",
        "      <th>rock_climbing</th>\n",
        "      <th>mountain_climbing</th>\n",
@@ -239,6 +265,8 @@
        "      <td>2020-03-23</td>\n",
        "      <td>christian73</td>\n",
        "      <td>1071965</td>\n",
+       "      <td>722846.725591</td>\n",
+       "      <td>5.729444e+06</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -253,6 +281,8 @@
        "      <td>2020-03-17</td>\n",
        "      <td>dormeur10</td>\n",
        "      <td>800213</td>\n",
+       "      <td>773581.331208</td>\n",
+       "      <td>5.770432e+06</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -267,6 +297,8 @@
        "      <td>2020-03-17</td>\n",
        "      <td>christian73</td>\n",
        "      <td>1071965</td>\n",
+       "      <td>728011.892440</td>\n",
+       "      <td>5.728002e+06</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -281,6 +313,8 @@
        "      <td>2020-03-17</td>\n",
        "      <td>janic</td>\n",
        "      <td>578085</td>\n",
+       "      <td>19054.692104</td>\n",
+       "      <td>5.294350e+06</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -295,6 +329,8 @@
        "      <td>2020-03-17</td>\n",
        "      <td>Paulo</td>\n",
        "      <td>991164</td>\n",
+       "      <td>723782.408575</td>\n",
+       "      <td>5.766919e+06</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -307,22 +343,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   document_id date_start   date_end  author.name  author.user_id  skitouring  \\\n",
-       "0      1196222 2020-03-23 2020-03-23  christian73         1071965        True   \n",
-       "1      1195244 2020-03-17 2020-03-17    dormeur10          800213        True   \n",
-       "2      1195133 2020-03-17 2020-03-17  christian73         1071965        True   \n",
-       "3      1195132 2020-03-17 2020-03-17        janic          578085        True   \n",
-       "4      1195116 2020-03-17 2020-03-17        Paulo          991164        True   \n",
+       "   document_id date_start   date_end  author.name  author.user_id  \\\n",
+       "0      1196222 2020-03-23 2020-03-23  christian73         1071965   \n",
+       "1      1195244 2020-03-17 2020-03-17    dormeur10          800213   \n",
+       "2      1195133 2020-03-17 2020-03-17  christian73         1071965   \n",
+       "3      1195132 2020-03-17 2020-03-17        janic          578085   \n",
+       "4      1195116 2020-03-17 2020-03-17        Paulo          991164   \n",
        "\n",
-       "   rock_climbing  mountain_climbing  ice_climbing  hiking  snow_ice_mixed  \n",
-       "0          False              False         False   False           False  \n",
-       "1          False               True          True   False            True  \n",
-       "2          False              False         False   False           False  \n",
-       "3          False              False         False   False           False  \n",
-       "4          False              False         False   False            True  "
+       "        latitude     longitude  skitouring  rock_climbing  mountain_climbing  \\\n",
+       "0  722846.725591  5.729444e+06        True          False              False   \n",
+       "1  773581.331208  5.770432e+06        True          False               True   \n",
+       "2  728011.892440  5.728002e+06        True          False              False   \n",
+       "3   19054.692104  5.294350e+06        True          False              False   \n",
+       "4  723782.408575  5.766919e+06        True          False              False   \n",
+       "\n",
+       "   ice_climbing  hiking  snow_ice_mixed  \n",
+       "0         False   False           False  \n",
+       "1          True   False            True  \n",
+       "2         False   False           False  \n",
+       "3         False   False           False  \n",
+       "4         False   False            True  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
