--- a/C2C_API_v5.ipynb
+++ b/C2C_API_v5.ipynb
@@ -17,8 +17,7 @@
     "import seaborn as sns\n",
     "from datetime import date, datetime\n",
     "import geopandas as gpd\n",
-    "from shapely.geometry import shape\n",
-    "from shapely.geometry import Point"
+    "from shapely.geometry import shape, Point"
    ]
   },
   {
@@ -183,19 +182,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "\n",
-    "path='C:/Users/Mossuz Damien/Documents/Python Scripts/_old - C2C API/input_ Archives (full)'\n",
-    "files = os.listdir(path)\n",
-    "\n",
-    "result=[]\n",
-    "\n",
-    "for file in files:\n",
-    "    with open(path + '/' + file, 'r', encoding='utf-8') as infile:\n",
-    "        json_data=json.load(infile)\n",
-    "    result.append(json_data)\n",
-    "\n",
-    "\n",
     "# Flatten json file - \n",
     "d = pd.DataFrame()\n",
     "\n",
@@ -552,7 +538,7 @@
     "\n",
     "#Plot barplot\n",
     "f, ax = plt.subplots(figsize=(9,6))\n",
-    "plt.bar(activities,arr_perc,color='m')\n",
+    "plt.bar(activities,arr_activities_perc,color='m')\n",
     "plt.title('Percentage of outings by activity')\n",
     "plt.show()"
    ]
@@ -581,13 +567,6 @@
     "#Mountain sports practice type varies across the year due to conditions changes e.g. snow - \n",
     "#Are C2C contributors polyvalent acrosse several sports?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
