--- a/C2C_API_v5.ipynb
+++ b/C2C_API_v5.ipynb
@@ -389,14 +389,7 @@
    ],
    "source": [
     "df_users = d.groupby('author.user_id',as_index=False).count()\n",
-    "print(df_users['document_id'].describe())\n",
-    "\n",
-    "#>>>>>Je peux prendre une période d'étude plus large pour les utilisateurs - \n",
-    "\n",
-    "# f, ax = plt.subplots(2,1, figsize=(9,6))\n",
-    "# ax[0].hist(df_users['document_id'],bins=50,cumulative=True, histtype='step',density=True)\n",
-    "# ax[1].hist(df_users.loc[(df_users['document_id']<=50) & (df_users['document_id']>1) ,'document_id'],bins=50)\n",
-    "# plt.show()"
+    "print(df_users['document_id'].describe())"
    ]
   },
   {
